# transactionanalyzer_py

./: README.md  pyproject.toml
data/: sample_transactions.csv
src/: __init__.py  analyzer.py  api.py  categorizer.py  cli.py  exporter.py  parser.py
templates/: dashboard.html
tests/: conftest.py  test_analyzer.py  test_api.py  test_categorizer.py  test_exporter.py  test_parser.py
