[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-analyzer"
version = "1.0.0"
description = "CLI and web dashboard for analyzing bank transactions from CSV/JSON files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Transaction Analyzer" }]
dependencies = [
    "pandas>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "plotly>=5.24.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "reportlab>=4.2.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]

[project.scripts]
txanalyze = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
